--- a/document/references.bib
+++ b/document/references.bib
@@ -21,3 +21,34 @@
   pages = {131},
   file = {/Users/davidjohnbaker/Zotero/storage/JMXSXINM/Harrison et al. - 1994 - Effects of Musical Aptitude, Academic Ability, Mus.pdf},
 }
+@Book{salzerStructuralHearingTonal1982,
+  address = {New York},
+  title = {Structural Hearing: Tonal Coherence in Music},
+  isbn = {978-0-486-22275-2},
+  shorttitle = {Structural Hearing},
+  language = {eng},
+  publisher = {{Dover}},
+  author = {Felix Salzer and Leopold Mannes},
+  year = {1982},
+}
+@Book{schenkerSchenkerStudies1990,
+  address = {Cambridge ; New York},
+  title = {Schenker Studies},
+  isbn = {978-0-521-36038-8},
+  lccn = {MT6 .S457 1990},
+  publisher = {{Cambridge University Press}},
+  editor = {Heinrich Schenker and Hedi Siegel and Carl Schachter},
+  year = {1990},
+  keywords = {Music theory,Congresses,Schenker; Heinrich},
+}
+
+@Book{schachterSchenkerStudies2006,
+  address = {Cambridge},
+  title = {Schenker Studies 2},
+  isbn = {978-0-521-02832-5 978-0-511-47029-5},
+  language = {English},
+  publisher = {{Cambridge University Press}},
+  author = {Carl Schachter},
+  year = {2006},
+  note = {OCLC: 850820339},
+}
